Update language version, rebalance recipes.